# kama-ui-json-plugin

./: README.md  pyproject.toml
src/kui_json_plugin/: ui_plugin.py
src/kui_json_plugin/provider/: metadata.py  section.py  style.py  tr.py
